# ChangeLog for dev-ruby/ruby-inline
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-inline/ChangeLog,v 1.13 2009/08/10 06:01:44 graaff Exp $

*ruby-inline-3.8.3 (10 Aug 2009)

  10 Aug 2009; Hans de Graaff <graaff@gentoo.org> +ruby-inline-3.8.3.ebuild:
  Version bump: Added Inline::C#add_static to make consts cleaner.

*ruby-inline-3.8.2 (25 Jul 2009)

  25 Jul 2009; Hans de Graaff <graaff@gentoo.org> +ruby-inline-3.8.2.ebuild:
  Version bump: fix broken tests for ruby 1.9.

  25 Jul 2009; Hans de Graaff <graaff@gentoo.org> -ruby-inline-3.6.7.ebuild,
  -ruby-inline-3.7.0.ebuild:
  Remove old versions.

*ruby-inline-3.8.1 (26 Dec 2008)

  26 Dec 2008; Hans de Graaff <graaff@gentoo.org> +ruby-inline-3.8.1.ebuild:
  Version bump

*ruby-inline-3.7.0 (06 Oct 2008)

  06 Oct 2008; Hans de Graaff <graaff@gentoo.org> +ruby-inline-3.7.0.ebuild:
  Version bump with ruby 1.9 compatibility and minor bugfixes

  06 Oct 2008; Hans de Graaff <graaff@gentoo.org> -ruby-inline-3.6.2.ebuild,
  -ruby-inline-3.6.4.ebuild, -ruby-inline-3.6.5.ebuild,
  -ruby-inline-3.6.6.ebuild:
  Remove old versions

*ruby-inline-3.6.7 (24 Mar 2008)

  24 Mar 2008; Richard Brown <rbrown@gentoo.org> +ruby-inline-3.6.7.ebuild:
  Version bump.

*ruby-inline-3.6.6 (26 Jan 2008)

  26 Jan 2008; Hans de Graaff <graaff@gentoo.org> +ruby-inline-3.6.6.ebuild:
  Version bump: better Windows support

*ruby-inline-3.6.5 (24 Nov 2007)

  24 Nov 2007; Hans de Graaff <graaff@gentoo.org> +ruby-inline-3.6.5.ebuild:
  Version bump: Quick fix for OSX 10.5 native ruby.

  14 Oct 2007; Tom Gall <tgall@gentoo.org> ruby-inline-3.6.4.ebuild:
  added ~ppc64

*ruby-inline-3.6.4 (25 Aug 2007)

  25 Aug 2007; Hans de Graaff <graaff@gentoo.org> +ruby-inline-3.6.4.ebuild:
  Version bump: Added ability to include ruby.h last

  13 Apr 2007; Robin H. Johnson <robbat2@gentoo.org>
  ruby-inline-3.6.2.ebuild:
  Add ~ppc and ~amd64 for work.
