@@ -1,8 +1,6 @@
-DIST RubyInline-3.8.1.gem 24576 RMD160 b5a46f87377b889da63f6daccee1f4bdee688a28 SHA1 4a8610d2cf6da5a9f8d7cbf3a8b320724973866d SHA256 54577d9ff40f7c6c53be10e49a5b87ba91fd2f6601a7e2eaf4f8dda711db3e10
-DIST RubyInline-3.8.2.gem 28160 RMD160 69325acf7c73609b4cc8860e435684d721d98cd7 SHA1 51228ca560070a1555341f70f23acf56cde1bbb1 SHA256 03a73a6a5471160d53390f12f91010de0dc995e692f30cdc7a246d15e0b4c34d
 DIST RubyInline-3.8.3.gem 25088 RMD160 900386e66e4957d79ec244dba83f342cdd1f0505 SHA1 ef214ec368a8167aae2be94d62bd29957eddda8b SHA256 e2b30e4321eab3de1e97e5f6a7712dbadbb3e30382b75a1a7e4daf36d6ba183e
-EBUILD ruby-inline-3.8.1.ebuild 606 RMD160 c9a166656510e815275a914ff0f4578c54187f7e SHA1 58f466c04fe5ce0ccc33d1c7692a40a2df092fb8 SHA256 7c860e3e3605049de8c1e595a562e58466d5a887d1d1184d901c46552509f2b9
-EBUILD ruby-inline-3.8.2.ebuild 604 RMD160 7398c006b1f4630b41a3f4d2df63a90b4c350723 SHA1 a33b19a3597435f183afddaaa14f37edb9402bf9 SHA256 2f036f0dc4455b95cf7570d7f55de20b94c9ec379bde58591f795c2b02101c90
+DIST RubyInline-3.8.4.gem 28160 RMD160 c89dedd0dddd77351e6113486b38a8722e56bee7 SHA1 5f334b2ca63a464ff260de0cafd2f55741344020 SHA256 58a7899dd5db81070cae58f3c9e1083117abf533d7ccb4addc16d40bd5aadc7e
 EBUILD ruby-inline-3.8.3.ebuild 604 RMD160 2860eb4ef560295f8f7ad5f258735d4e7b5146a4 SHA1 53d6fc29c0e17a2a2a617d86c07d1be9cfe5c64e SHA256 77e7766c9b782558375c4bc0fd10964578ffba5000a3ded1ebd8fe0828daea33
-MISC ChangeLog 2191 RMD160 74a85eb41dfe46fa191c6cdd075c213edcabf84c SHA1 7c086c8db46a1b4606911fed2838c1b7cca2d27f SHA256 47e512ca699a3f24b37aefb8f22ddddaf75e92eee11b8f7f2ccc6cf9b52e820c
+EBUILD ruby-inline-3.8.4.ebuild 900 RMD160 402d73e2640e4bcb06c21caf8dbf15796b5f2f00 SHA1 07dcd7e5af9fc91129314781e6f2008758e4454e SHA256 6d480dbc5a921dc10c04fcd7d7ed56cb1e8aba099f766690893f12f11a9e6f01
+MISC ChangeLog 2485 RMD160 d44865ee4f4ebab2f71df6d48b0f64d7f91427f0 SHA1 9db1289047d25b586968bf518e9aff8880f4ce03 SHA256 69ab3379516e6b4bfd986d2dd19f0e29e433939dc89ea9302b67788f4159fb51
 MISC metadata.xml 158 RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 SHA1 7ac646714b1ab83fda98f3ccdd8b48a31c148b27 SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032
