@@ -1,6 +1,16 @@
 # ChangeLog for dev-ruby/ruby-inline
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-inline/ChangeLog,v 1.13 2009/08/10 06:01:44 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-inline/ChangeLog,v 1.15 2009/12/25 18:49:49 flameeyes Exp $
+
+*ruby-inline-3.8.4 (25 Dec 2009)
+
+  25 Dec 2009; Diego E. Pettenò <flameeyes@gentoo.org>
+  +ruby-inline-3.8.4.ebuild:
+  Version bump and port to ruby-fakegem.
+
+  15 Dec 2009; Hans de Graaff <graaff@gentoo.org> -ruby-inline-3.8.1.ebuild,
+  -ruby-inline-3.8.2.ebuild:
+  Remove old versions.
 
 *ruby-inline-3.8.3 (10 Aug 2009)
 
